--- a/package.json
+++ b/package.json
@@ -2,9 +2,21 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
-    "esbuild": "^0.17.19"
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "dotenv": "^16.0.3",
+    "esbuild": "^0.17.19",
+    "framer-motion": "^10.12.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
