adds client side imple

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/node": "^20.2.4",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "dotenv": "^16.0.3",
     "esbuild": "^0.17.19",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
