--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+yarn-error.log
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
@@ -27,6 +28,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore JavaScript environment setups
+/app/assets/javascripts/settings.js
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
